--- a/src/scss/_powerHouse.scss
+++ b/src/scss/_powerHouse.scss
@@ -8,6 +8,7 @@
     }
     &-body{
         width: 20%;
+        padding: 0 20px;
         &__subtitle{
             padding: 120px 0 0 0;
         }
@@ -26,12 +27,43 @@
 }
 @media (max-width: 1200px) {
     .powerHouse{
-        &-bg{
-            width: 50%;
+        &-body{
+            width: 30%;
         }
+    }
+}
+@media (max-width: 1200px) {
+    .powerHouse{
+        &-body{
+            width: 30%;
+        }
+    }
+}
+@media (max-width: 768px) {
+    .powerHouse{
         &-body{
             width: 50%;
         }
     }
-
+}
+@media (min-width: 768px) {
+    .powerHouse{
+        &-body{
+            width: 50%;
+        }
+    }
+}
+@media (max-width: 500px) {
+    .powerHouse{
+        &-body{
+            width: 70%;
+        }
+    }
+}
+@media (min-width: 500px) {
+    .powerHouse{
+        &-body{
+            width: 70%;
+        }
+    }
 }
