--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -132,3 +132,21 @@ select {
     font-size: 16px;
   }
 }
+@media (max-width: 1200px) {
+  ._container{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+}
+@media (max-width: 992px) {
+  ._container{
+    max-width: 932px;
+    margin: 0 auto;
+}
+}
+@media (max-width: 768px) {
+  ._container{
+    max-width: 708px;
+    margin: 0 auto;
+}
+}
